Quotes interfering with pdf conversion? - Claideighm

--- a/npcs/Claideighm_Hot_Pants_Battleweave.yaml
+++ b/npcs/Claideighm_Hot_Pants_Battleweave.yaml
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Claideighm "Hot Pants" Battleweave
+  name: Claideighm /"Hot Pants/" Battleweave
 
   #
   # The NPC artwork.
