--- a/npcs/gruda_wheatsheaf_combfavor.yaml
+++ b/npcs/gruda_wheatsheaf_combfavor.yaml
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Gruda "Wheatsheaf" Combfavor
+  name: Gruda 'Wheatsheaf' Combfavor
 
   #
   # The NPC artwork.
