Pdf conversion and special characters

--- a/npcs/Uha_Boomer_Bannock.yaml
+++ b/npcs/Uha_Boomer_Bannock.yaml
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Uha "Boomer" Bannock
+  name: Uha 'Boomer' Bannock
 
   #
   # The NPC artwork.
